Fixed add to collection button missing on mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -643,7 +643,7 @@ select {
         flex-direction: column;
     }
 
-    .dropdown {
+    #card-search-controls {
         display: none; /* Hide table / cards dropdown on mobile */
     }
 
